# WeatherDataApplication

./: CMakeLists.txt  README.md
headers/: AirQuality.h  HistoricalWeather.h  LocationManager.h  MainMenu.h  Setting.h  VariableHandler.h  WeatherForecast.h
src/: AirQuality.cpp  HistoricalWeather.cpp  LocationManager.cpp  MainMenu.cpp  Setting.cpp  VariableHandler.cpp  WeatherForecast.cpp  main.cpp
testing/: ErrorChecking.cpp
